# src/routes/api/v1/creator.route.ts
@@ -1,31 +1,38 @@
 import { PrismaClient } from "../../../generated/prisma/client";
 import { Router } from "express";
 import z from "zod";
-import { authenticateMiddlewareClosure, RequestWithResolvableUser } from "./users.route";
+import {
+  authenticateMiddlewareClosure,
+  RequestWithResolvableUser,
+} from "./users.route";
 
 export function setupCreatorRouter(prismaClient: PrismaClient): Router {
   const creatorRouter = Router();
 
-  creatorRouter.get("/compilation", authenticateMiddlewareClosure(prismaClient), async (req: RequestWithResolvableUser, res) => {
-    const authenticatedUser = req.user!;
-    try {
-      const compilations = await prismaClient.compilation.findMany({
-        where: {
-          creatorId: authenticatedUser.id
-        },
-      })
-      res.json(compilations)
-    } catch {
-      res.status(400).json({ error: "Could not get compilations" })
-    }
-  })
+  creatorRouter.get(
+    "/compilation",
+    authenticateMiddlewareClosure(prismaClient),
+    async (req: RequestWithResolvableUser, res) => {
+      const authenticatedUser = req.user!;
+      try {
+        const compilations = await prismaClient.compilation.findMany({
+          where: {
+            creatorId: authenticatedUser.id,
+          },
+        });
+        res.json(compilations);
+      } catch {
+        res.status(400).json({ error: "Could not get compilations" });
+      }
+    },
+  );
 
   creatorRouter.get("/:id", async (req, res) => {
     const creatorIDString = req.params.id;
     const creatorID = parseInt(creatorIDString);
     if (Number.isNaN(creatorID)) {
-      res.status(403).json({ error: "Could not parse creator ID" })
-      return
+      res.status(403).json({ error: "Could not parse creator ID" });
+      return;
     }
 
     try {
@@ -79,31 +86,6 @@ export function setupCreatorRouter(prismaClient: PrismaClient): Router {
         id: true,
         username: true,
         password: false,
-      },
-    });
-
-    res.json(users);
-  });
-
-  const CreatorCreateQuerySchema = z.object({
-    name: z.string(),
-  });
-
-  creatorRouter.post("/", async (req, res) => {
-    const parseResult = CreatorCreateQuerySchema.safeParse(req.query);
-    if (!parseResult.success) {
-      return res.status(400).json({
-        error: "Invalid query parameters",
-        details: parseResult.error,
-      });
-    }
-
-    const query = parseResult.data;
-    const { name } = query;
-
-    const users = await prismaClient.user.create({
-      data: {
-        username: name,
       },
     });
 
